# FarmTwin

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  changelog.md  pyproject.toml  requirements.md  specifications.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/commissioning/: README.md
apps/dashboard/: README.md
apps/runtime/: README.md
apps/studio/: README.md
docs/: 01-venture-decision.md  02-problem-statement.md  03-dpiit-ksum-registration.md  04-ksum-idea-grant-application.md  05-agrinext-problem-statement.md  06-incorporation-guide.md  07-funding-roadmap.md  08-fpo-pilot-mou-template.md  09-agri-fintech-phase2.md  10-branding-and-trademark.md  11-ksum-pitch-deck.md  12-moolathara-beachhead.md  13-pitch-narrative-and-one-pager.md  14-partnership-mou-and-vendor-registration.md  coding-standards.md  requirements.md  survey-schema.md
docs/adr/: 0001-two-product-one-engine.md  0002-c-solver-cores.md  0003-lorawan-in865.md
docs/examples/: eruthempathy_pilot.fts.json
engine/: README.md  requirements-dev.txt  requirements.txt
engine/FarmTwin/: __init__.py  agronomy.py  assimilation.py  catalog.py  commissioning.py  components.py  evaluate.py  fao56.py  geo.py  headloss.py  optimize.py  params.py  postprocess.py  preprocess.py  richards.py  solver.py  studio_design.py  surface.py  transient.py
engine/FarmTwin/schemas/: fts_survey_schema.json
engine/docs/: 10-numerical-methods-and-architecture.md  11-freecad-openfoam-twin-iitpkd-roadmap.md  12-solver-mathematics.md  13-sensors-and-instrumentation.md  14-digital-twin-data-assimilation.md  15-iitpkd-collaboration-brief.md  16-annotated-bibliography.md  17-weather-data-integration.md  18-iot-control-architecture.md  19-two-product-architecture.md  20-design-optimization.md  21-agronomy-layer.md  22-implementation-whitepapers.md  README.md
engine/examples/: demo_drip_system.py
engine/krishiflow/: __init__.py  components.py  emitters.py  fao56.py  headloss.py  network.py  params.py  postprocess.py  preprocess.py  quality.py  solver.py
engine/tests/: __init__.py  conftest.py  test_assimilation.py  test_design_phase1.py  test_design_phase2.py  test_design_phase3.py  test_design_phase4.py  test_fao56.py  test_quality.py  test_schema.py  test_solver.py
engine/tests/baselines/: README.md
infra/cloud/: README.md
infra/edge/: README.md
infra/iot/: README.md
mvp/: PILOT.md  index.html
pitch/: README.md  build_pptx.py  deck.html  one-pager.md  package-lock.json  package.json  pitch-deck.html  pitch-deck.md  pitch-deck.pptx  pitch-script.md
presentation/: FarmTwin-pitch.pptx  README.md  build_deck.py
scripts/: ai_code_review.py  generate_baselines.py  upload_to_github.py  validate_schema.py
