[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmtwin-engine"
version = "0.2.0"
description = "FarmTwin agri-digital-twin irrigation engine (krishiflow core)"
requires-python = ">=3.11"
readme = "engine/README.md"
license = { text = "Proprietary" }
authors = [{ name = "Arun T.", email = "arun@farmtwin.ai" }]

dependencies = [
    "numpy>=1.26,<2.0",
    "scipy>=1.12,<2.0",
    "jsonschema>=4.22",
    "httpx>=0.27",          # async weather API client
    "ioos-qc>=2.1",         # QARTOD B6 gate
    "psycopg2-binary>=2.9", # time-series DB client
    "pymoo>=0.6",           # NSGA-II design optimizer
]

[project.optional-dependencies]
dev = [
    "ruff==0.4.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "anthropic>=0.25",      # AI code review bot
    "PyGithub>=2.3",        # AI code review bot — GitHub API
    "matplotlib>=3.8",      # postprocess plots
    "reportlab>=4.1",       # BoM PDF generation
]

[tool.setuptools]
package-dir = { "" = "engine" }

[tool.setuptools.packages.find]
where = ["engine"]
include = ["krishiflow*"]

# ─── Ruff ────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["engine"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D212",   # multi-line-summary-first-line (conflicts with D213)
    "ANN101", # self annotation not required
    "ANN102", # cls annotation not required
    "S101",   # use of assert — allowed in tests
    "PLR2004",# magic number comparison — unavoidable in physics tests
]
fixable = ["E", "W", "F", "I", "UP", "C4", "SIM", "RUF"]
unfixable = ["B", "S"]  # security and bugbear require manual review

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["krishiflow"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# Test files: allow missing annotations on test functions, magic numbers
"engine/tests/*.py" = ["ANN", "D", "PLR2004", "S101"]
# Scripts: allow print statements
"scripts/*.py" = ["T201"]

# ─── Pytest ──────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths   = ["engine/tests"]
python_files  = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -p no:warnings"
markers = [
    "unit:        fast unit tests; no I/O or network access",
    "regression:  regression tests against analytic or stored baseline outputs",
    "tdd:         TDD stubs — expected to fail until product code is written",
    "integration: may use files, subprocess, or network",
    "benchmark:   slow performance benchmarks",
]
filterwarnings = ["error::DeprecationWarning", "error::RuntimeWarning"]

# ─── Coverage ────────────────────────────────────────────────────────

[tool.coverage.run]
source   = ["engine/krishiflow"]
omit     = ["engine/tests/*", "scripts/*"]
branch   = true

[tool.coverage.report]
show_missing   = true
skip_covered   = false
exclude_lines  = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",             # abstract method stubs
]
fail_under = 55
